# igloo

./: .env.example  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  create_sample_table.py  docker-compose.yml  setup_postgres.sh
.github/workflows/: rust.yml
adbc_poc/: Cargo.toml
adbc_poc/src/: main.rs
dummy_iceberg_cdc/: event1.json
proto/: compute.proto
rust_projects/adbc_poc_final_try/: Cargo.toml
sample_iceberg_table_warehouse/: pyiceberg_catalog.db
sample_iceberg_table_warehouse/local_catalog.db/sample_table/data/: 00000-0-15679fae-422d-408d-a6ca-ef94a3aa2b87.parquet  00000-0-e20de39f-ceee-4b85-9ab2-9083225fd2b9.parquet  00000-0-fc554b42-895a-4adc-ac93-b0d908ef6537.parquet
sample_iceberg_table_warehouse/local_catalog.db/sample_table/metadata/: 00000-2d869c6e-e0ae-4265-9ff1-13a5a0b0d0d1.metadata.json  00000-42d1dfd3-a5c7-4355-9cf2-75a585148796.metadata.json  00000-4bdbaf1c-943f-429c-bc72-5a920c69f41f.metadata.json  00000-61e9c019-018b-4a08-9e08-cba5d0c6215e.metadata.json  00000-663baefe-8908-4f41-b03e-f8130fa3d2b1.metadata.json  00000-7e5302aa-ba72-40fe-8234-0b775b4216b8.metadata.json  00000-c91cce3d-64ea-487e-9528-e5640b12aa14.metadata.json  00000-d04c1b13-3fcd-44ba-a070-d616ee6550dd.metadata.json  00000-e36e0530-fc31-42f3-a191-c9659fb9176d.metadata.json  00001-0f6e0a44-c021-4a16-bc58-870e58666a12.metadata.json  00001-12c209ca-3f93-40f3-9176-abbe117af9f8.metadata.json  00001-31bfcef7-92a7-4597-9b15-975a71a08699.metadata.json  00001-3666dda4-5aa6-4a3c-808f-d24f2e705281.metadata.json  00001-47c513a2-1bcd-49d7-975b-93fafb386ae7.metadata.json  00001-839f40ab-8f7d-4ac6-b2ac-9d76ad724f67.metadata.json  00001-9b77b3ca-36c5-4c8d-b4d5-77f450ce1883.metadata.json  00001-fa678e41-2889-468c-8917-e94f7f7d5a1c.metadata.json  00002-05064bcf-c06b-42bf-a817-11e91ec50c55.metadata.json  00002-16c49124-0592-408d-92ed-29aa012352df.metadata.json  00002-173ecae8-87db-434d-9888-c73537a038c6.metadata.json  00002-30089d5a-7629-4513-9da7-c1c4c5605024.metadata.json  00002-334f4d52-24d4-4b59-a675-034728d9a22e.metadata.json  00002-d12a0196-88fe-49de-8904-0c1d4373d023.metadata.json  00002-d15736ea-7a57-40c6-95c7-cd07ab3427ec.metadata.json  00002-ed4a31df-fe23-4127-86b6-a527e3f75a82.metadata.json  00003-110a45d9-acc5-4508-a9e9-ffd77213ba47.metadata.json  00003-17cca681-a8df-4be2-8b16-92c90938fc67.metadata.json  00003-250040d2-1456-4613-af92-5db23cd64dd6.metadata.json  00003-30fa68a5-a3c6-4c8d-ac3a-b370f3a37eac.metadata.json  00003-85523713-c15d-48c3-9ba5-3506968c9aa8.metadata.json  00003-89998660-31e5-4951-bdf2-3a232479ffa9.metadata.json  00003-b9bfb9bf-add7-4b4e-bd6d-cbc57e63412c.metadata.json  00003-e531a338-23d7-4bda-b802-62749318bb8f.metadata.json  0e985c6a-7d02-4897-99a9-10a1b9d6f4d6-m0.avro  15679fae-422d-408d-a6ca-ef94a3aa2b87-m0.avro  1a1f7ce4-9e28-455d-9f4d-7cd0cc7fa3f9-m0.avro  2a01d68e-b74f-4b51-9790-4fda18de324e-m0.avro  3a5c997a-8226-4a36-9dd5-676933f6c24c-m0.avro  4123a734-ad62-42d0-824e-98b11743bf95-m0.avro  56db42aa-c8f4-46ce-9e82-63525d1ab311-m0.avro  (+41 more)
src/: adbc_connector.rs  adbc_postgres.rs  adbc_postgres_ffi.rs  cache_layer.rs  cdc_sync.rs  datafusion_engine.rs  errors.rs  lib.rs  main.rs  postgres_table.rs  query_engine.rs
src/api/: mod.rs
src/api/proto/: worker.proto
src/compute/: api.rs  errors.rs  mod.rs  registry.rs  rpc.rs  scheduler.rs
src/coordinator/: error.rs  mod.rs  planner.rs  scheduler.rs
src/execution/: error.rs  execution.rs  mod.rs  operators.rs  physical_plan.rs
src/sql_frontend/: converter.rs  logical_plan.rs  mod.rs  parser.rs  tests.rs
src/worker/: executor.rs  mod.rs
tests/: integration_test.rs
