[package]
name = "igloo"
version = "0.1.0"
edition = "2021"

authors = ["Your Name <you@example.com>"]
description = "A Rust-based data caching layer for Trino and Iceberg."
license = "MIT"

[dependencies]
# adbc-rs = { path = "adbc-rs/core" }
arrow = "50.0.0" # Downgraded for Rust 1.75.0 compatibility with DataFusion 39.0.0
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync"] } # Specific features
async-trait = "0.1.88"
datafusion = "39.0.0" # Downgraded for Rust 1.75.0 compatibility
libloading = "0.8" # For FFI
reqwest = { version = "0.11.27", features = ["blocking"] } # Downgraded for Rust 1.75.0 compatibility
adbc_core = { version = "0.16.0", features = ["driver_manager"] } # Trying version 0.16.0 for Rust 1.75.0 compatibility
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] } # Postgres driver
tracing = "0.1" # Structured logging framework
tracing-subscriber = { version = "0.3", features = ["fmt"] } # Tracing subscriber
thiserror = "1.0" # Error handling
url = "2.5.2" # For url::ParseError in IglooError
serde = { version = "1.0.197", features = ["derive"] } # Using a recent version
bincode = "1.3.3" # Common version
tonic = "0.11.0"
prost = "0.12.3"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
log = "0.4.22" # Logging facade
env_logger = "0.11.3" # Logger implementation
scopeguard = "1.2.0" # RAII guard
chrono = "0.4.38" # Date/time library, for tokio-postgres
num_cpus = "1.16.0" # To get number of CPUs for DataFusion config
sqlparser = "0.36.1" # Pinning version compatible with DataFusion 39.0.0 and Rust 1.75.0
chrono-tz = "0.8.6" # Pinning version compatible with DataFusion 39.0.0 and Rust 1.75.0
native-tls = "0.2.11" # Pinning version for Rust 1.75.0 compatibility (related to reqwest)

# ICU ecosystem pins (aiming for 1.3.0 or compatible)
icu_properties = "1.3.0"
icu_normalizer = "1.3.0"
icu_locid = "1.3.0"
# icu_codepoint = "1.3.0" # Removed as it's not a valid crate name
icu_provider = "1.3.0"
icu_collections = "1.3.0"
# icu_data = "1.3.0" # icu_data is a meta-package, often not pinned directly unless for specific data sets
icu_calendar = "1.3.0"
icu_datetime = "1.3.0"
icu_decimal = "1.3.0"
icu_list = "1.3.0" # Corrected package name
icu_plurals = "1.3.0"
# icu_relativetime_formatter = "1.3.0" # Temporarily remove to see next clippy error
icu_segmenter = "1.3.0"
icu_timezone = "1.3.0"
# icu_uniset = "1.3.0" # Temporarily remove due to update/clippy inconsistency
icu_locid_transform = "1.3.0"

# Dependencies often related to ICU or older systems
zerovec = "0.10.4" # Updated for ICU 1.3.0 compatibility
# fixed_decimal = "0.5.4" # This crate might not be directly needed as a pin, often a dep of icu_decimal
tinyvec = "1.6.0"


[build-dependencies]
prost-build = "0.12.3"
tonic-build = { version = "0.11.0", features = ["prost"] }
