workspace = { members = ["adbc_poc", "rust_projects/adbc_poc", "rust_projects/adbc_poc_final_try"] }
[package]
name = "adbc_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2" # For C types like c_char, c_int, c_void, etc.

# Linker notes (for documentation, actual linking controlled by rustc via RUSTFLAGS or build script):
# Needs to link against:
# 1. libadbc_driver_postgresql.so (expected in /usr/local/lib after ADBC build)
# 2. libpq.so (PostgreSQL client library, from libpq-dev, e.g. /usr/lib/x86_64-linux-gnu)
